--- a/main/templates/main/payment_success.html
+++ b/main/templates/main/payment_success.html
@@ -6,7 +6,7 @@
 <h4>Thank You.</h4>
 <h4>Your order status is {{ status }}</h4>
 <h4>Your Transaction ID for this transaction is {{ txnid }}</h4>
-<h4>We have received a payment of Rs {{ amount}}</h4> 
+<h4>We have received a payment of Rs. {{ amount}}</h4> 
 
 </body>
 </html>
