--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -1,78 +1,18 @@
-<!doctype html>
-<html class="no-js" lang="zxx">
+{% extends 'main/base.html' %}
+{% load static %}
+{% block content %}
 
-<script>
-if(localStorage.getItem('isLoggedIn') === 'true'){
-}
-else {
-//  window.location = "http://www.cinepassx.com";
-  console.log("Hacking Attempt!");
-}
-</script>
+{% for show in shows %}
+<div class="show">
+  <div class="show-title">{{ show.movie.title }}</div>
+  <div class="show-date">{{ show.time|date:'D, d M' }}</div>
+  <div class="show-time">{{ show.time|date:'g:i A' }}</div>
+</div>
+{% endfor %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="author" content="Sumon Rahman">
-    <meta name="description" content="">
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Title -->
-    <title>CinepassX</title>
-    <!-- Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
-    <!-- Plugin-CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/linearicons.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <!-- Main-Stylesheets -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+{{ date }}
 
-    <!--[if lt IE 9]>
-        <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body data-spy="scroll" data-target=".mainmenu-area">
-    <!-- Preloader-content -->
-    <div class="preloader">
-        <span><i class="lnr lnr-sun"></i></span>
-    </div>
-    <!-- MainMenu-Area -->
-    <nav class="mainmenu-area" data-spy="affix" data-offset-top="0">
-        <div class="container-fluid">
-            <div class="navbar-header-">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#primary_menu">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="primary_menu">
-                <ul class="nav navbar-nav mainmenu" >
-                    <li class="active">
-                      <a href="#home_page" >Home</a></li>
-                    <li><a href="#contact_page">About</a></li>
-                    <li><a href="#contact_page">Upload Bills</a></li>
-                    <li><a href="#contact_page">Contact Us</a></li>
-                </ul>
-                <div class="right-button hidden-xs" id="btn-logout">
-                    <a href="#">Log Out</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-
-        <section class="section-padding price-area" id="price_page">
+<!--         <section class="section-padding price-area" id="price_page">
             <div class="container">
               <div class="page-title text-center">
                   <h4 class="title">Book movie tickets</h4>
@@ -80,26 +20,26 @@ else {
                 <div class="row">
                     <div class="col-xs-6 col-sm-6 col-lg-3 col-md-3 customPoster">
                       <figure class="mobile-image wow fadeInUp" data-wow-delay="0.3s">
-                          <img src="images/four.jpg" alt="">
+                          <img src="{% static 'main/images/four.jpg' %}" alt="">
                           <a href="/cinema_select"></a>
                       </figure>
                     </div>
                     <div class="col-xs-6 col-sm-6 col-lg-3 col-md-3 customPoster">
 
                       <figure class="mobile-image wow fadeInUp" data-wow-delay="0.3s">
-                          <img src="images/one.jpg" alt="">
+                          <img src="{% static 'main/images/one.jpg' %}" alt="">
                           <a href="/this.html" ></a>
                       </figure>
                     </div>
                     <div class="col-xs-6 col-sm-6 col-lg-3 col-md-3 customPoster">
                       <figure class="mobile-image wow fadeInUp" data-wow-delay="0.3s">
-                          <img src="images/two.jpg" alt="">
+                          <img src="{% static 'main/images/two.jpg' %}" alt="">
                           <a href="/cinema_select"></a>
                       </figure>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-lg-3 col-md-3 customPoster">
                           <figure class="mobile-image wow fadeInUp" data-wow-delay="0.3s">
-                              <img src="images/three.png" alt="">
+                              <img src="{% static 'main/images/three.png' %}" alt="">
                               <a href="/cinema_select"></a>
                           </figure>
                             </div>
@@ -128,86 +68,6 @@ else {
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- About-Area-End -->
-    <!-- Footer-Area -->
-    <footer class="footer-area" id="contact_page">
-        <div class="section-padding">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="page-title text-center">
-                            <h5 class="title">Contact US</h5>
-                            <h3 class="dark-color">Find Us By Bellow Details</h3>
-                            <div class="space-60"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="footer-box">
-                            <div class="box-icon">
-                                <span class="lnr lnr-map-marker"></span>
-                            </div>
-                            <p>8-54 Paya Lebar Square <br /> 60 Paya Lebar Roa SG, Singapore</p>
-                        </div>
-                        <div class="space-30 hidden visible-xs"></div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="footer-box">
-                            <div class="box-icon">
-                                <span class="lnr lnr-phone-handset"></span>
-                            </div>
-                            <p>+65 93901336 <br /> +65 93901337</p>
-                        </div>
-                        <div class="space-30 hidden visible-xs"></div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <div class="footer-box">
-                            <div class="box-icon">
-                                <span class="lnr lnr-envelope"></span>
-                            </div>
-                            <p>yourmail@gmail.com <br /> backpiper.com@gmail.com
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Footer-Bootom -->
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-md-5">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <span>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="lnr lnr-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        <div class="space-30 hidden visible-xs"></div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <!-- Footer-Bootom-End -->
-    </footer>
-    <!-- Footer-Area-End -->
-    <!--Vendor-JS-->
-    <script src="js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="js/vendor/jquery-ui.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script type="text/javascript" src="node_modules/auth0-js/build/auth0.js"></script>
-    <!--Plugin-JS-->
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/contact-form.js"></script>
-    <script src="js/ajaxchimp.js"></script>
-    <script src="js/scrollUp.min.js"></script>
-    <script src="js/magnific-popup.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/processing.js"></script>
-    <!--Main-active-JS-->
-    <script src="js/main.js"></script>
-</body>
-
-</html>
+{% endblock content %}
