--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -52,7 +52,7 @@
                 <ul class="nav navbar-nav mainmenu" >
                     <li class="active">
                       <a href="{% url 'home' %}" >Home</a></li>
-                    <li><a href="#about_page">Book Tickets</a></li>
+                    <li><a href="{% url 'book-show' %}">Book Tickets</a></li>
                     <li><a href="#contact_page">About</a></li>
                     <li><a href="#contact_page">Upload Bills</a></li>
                     <li><a href="#contact_page">Contact Us</a></li>
