--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -323,9 +323,58 @@ input:-webkit-autofill:focus {
 
 }
 
-
-
 .mainmenu-area:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d6840a+0,ffbb52+100 */
+  background: #d6840a; /* Old browsers */
+  background: rgba(76, 175, 80, 0.1);
+  background: -moz-linear-gradient(45deg, #d6840a 0%, #ffbb52 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6840a', endColorstr='#ffbb52',GradientType=0 ); /* IE6-9 */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#482cbf', endColorstr='#6ac6f0', GradientType=1);
+    z-index: -1;
+    opacity: 1;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.mainmenu-area-home {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    padding: 20px 140px 15px 0;
+  -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.mainmenu-area-home-loggedin {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    padding: 20px 140px 15px 0;
+  -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    background: #d6840a; /* Old browsers */
+    background: rgba(76, 175, 80, 0.1);
+    background: -moz-linear-gradient(45deg, #d6840a 0%, #ffbb52 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+
+.mainmenu-area-home:before {
     content: '';
     position: absolute;
     left: 0;
@@ -345,6 +394,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6840a', end
     -o-transition: 0.3s;
     transition: 0.3s;
 }
+
+
 
 .mainmenu-area.affix {
     
@@ -437,6 +488,105 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6840a', end
     padding: 0 15px;
 }
 
+.mainmenu-area .navbar-brand img {
+    height: 40px;
+}
+
+.mainmenu-area-home.affix {
+    
+    background: #d6840a; /* Old browsers */
+  background: rgba(76, 175, 80, 0.1);
+  background: -moz-linear-gradient(45deg, #d6840a 0%, #ffbb52 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+
+}
+
+.mainmenu-area-home.affix:before {
+    background: #d6840a; /* Old browsers */
+  background: rgba(76, 175, 80, 0.1);
+  background: -moz-linear-gradient(45deg, #d6840a 0%, #ffbb52 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #d6840a 0%,#ffbb52 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+
+.mainmenu-area-home .right-button  {
+    position: absolute;
+    right: 15px;
+    top: 12px;
+    color: #ffffff;
+    padding: 10px 40px;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.3);
+    letter-spacing: 1.5px;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.mainmenu-area-home .right-button:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: #D6840A;
+    text-decoration: none;
+    outline: none;
+    color: #D6840A;
+}
+
+
+
+.mainmenu-area-home .right-button a {
+    color: #ffffff;
+
+    border-radius: 50px;
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.mainmenu-area-home .right-button a:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: #D6840A;
+}
+
+.mainmenu-area-home ul.mainmenu {
+    text-align: center;
+    float: none;
+    display: block;
+}
+
+.mainmenu-area-home ul.mainmenu li {
+    float: none;
+    display: inline-block;
+    text-align: center;
+}
+
+.mainmenu-area-home ul.nav.navbar-nav li a {
+    color: #ffffff;
+    padding: 10px 2px;
+    text-transform: capitalize;
+    background: transparent;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    margin: 0 15px;
+}
+
+.mainmenu-area-home ul.nav.navbar-nav li a:hover,
+.mainmenu-area-home ul.nav.navbar-nav li.active a {
+    border-bottom-color: #ffffff;
+}
+
+.mainmenu-area-home .navbar-brand {
+    height: auto;
+    padding: 0 15px;
+}
+
+.mainmenu-area-home .navbar-brand img {
+    height: 40px;
+}
+
   .section-padding {
     margin-top: 150px;
   }
@@ -444,10 +594,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6840a', end
   .col-xs-6{
     margin-top: 20px;
   }
-.mainmenu-area .navbar-brand img {
-    height: 40px;
-}
-
 /*-- 6. Page-Title --*/
 
 .page-title .title {
