--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -49,7 +49,7 @@
 
 
     <!-- About-Area -->
-    <section class="section-padding" id="about_page">
+<!--     <section class="section-padding" id="about_page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-10 col-md-offset-1">
@@ -65,6 +65,6 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> --> 
     <!-- About-Area-End -->
 {% endblock content %}
