--- a/main/templates/main/payment_failure.html
+++ b/main/templates/main/payment_failure.html
@@ -1,8 +1,8 @@
-_<html>
-<body>
+{% extends "main/base.html" %}
+{% block content %}
 <div style="display:none">
    	<input type="hidden" name="csrfmiddlewaretoken" value="{% csrf_token %}">
 </div>
 <h2>transaction failed</h2>
-</body>
-</html>
+
+{% endblock content %}
