--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -15,7 +15,7 @@
                     <h1 class="wow fadeInUp" data-wow-delay="0.4s">Watch unlimited movies at a cinema near you.</h1>
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-                        <p>Do you like to watch movies? This is by far the best deal on the market that you can avail. <a href="/t_c.html"> T&C applied.</a></p>
+                        <p>Do you like to watch movies? This is by far the best deal on the market that you can avail. <a href="{% url 'terms' %}"> T&C applied.</a></p>
                     </div>
                     <div class="space-20"></div>
                     <a href="#price_page" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Subscribe</a>
@@ -43,7 +43,7 @@
 
                 </div>
                 <div class="col-xs-12 col-sm-4">
-                    <div class="price-box" style="background-image: url('{% static 'main/images/price_box.jpg' %}')">
+                    <div class="price-box">
                         <div class="price-header" style="background-image: url('{% static 'main/images/price_box.jpg' %}')">
                             <div class="price-icon">
                                 <span class="lnr lnr-diamond"></span>
@@ -56,13 +56,13 @@
                                 <li>Weekdays Only</li>
                                 <li>No convenience fees</li>
                             </ul>
-                            <div class='pm-button'><a href="{% url 'payment' %}"><img src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/21.png' /></a></div> 
+<!--                             <div class='bttn-default'><a href="{% url 'payment' %}">OWO<img src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/21.png' /></a></div>  -->
                         </div>
                         <div class="price-rate">
                             <sup>&#8377;</sup> <span class="rate">399</span> <small>/Month</small>
                         </div>
                         <div class="price-footer">
-                            <a href="#" class="bttn-white" id = "btn-sub">Subscribe</a>
+                            <a href="{% url 'payment' %}" class="bttn-white wow" data-wow-delay="0.8s">Subscribe</a>
                         </div>
                     </div>
                     <div class="space-30 hidden visible-xs"></div>
@@ -89,7 +89,7 @@
                     <div class="space-20"></div>
                     <p>Download our android app for a btter experience.</p>
                     <div class="space-60"></div>
-                    <a href="#" class="bttn-white sq"><img src="{% static 'main/images/apple-icon.png' %}" alt="apple icon"> Apple Store</a>
+ <!--                    <a href="#" class="bttn-white sq"><img src="{% static 'main/images/apple-icon.png' %}" alt="apple icon"> Apple Store</a> -->
                     <a href="#" class="bttn-white sq"><img src="{% static 'main/images/play-store-icon.png' %}" alt="Play Store Icon"> Play Store</a>
                 </div>
             </div>
@@ -102,11 +102,11 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="subscribe-form text-center">
-                        <h3 class="blue-color">Subscribe to be updated about us</h3>
+                        <h3 class="blue-color">Subscribe to our Emails</h3>
                         <div class="space-20"></div>
-                        <form id="mc-form">
+                        <form id="mc-form" action="/mail-subscribe/">
                             <input type="email" class="control" placeholder="Enter your email" required="required" id="mc-email">
-                            <button class="bttn-white active" type="submit"><span class="lnr lnr-location"></span> Subscribe</button>
+                            <button class="bttn-white active" type="submit"><span class="lnr lnr-location"></span>Subscribe</button>
                             <label class="mt10" for="mc-email"></label>
                         </form>
                     </div>
@@ -115,8 +115,10 @@
         </div>
     </div>
     <!-- Subscribe-Form-Area -->
+
+
     <!-- About-Area -->
-    <section class="section-padding" id="about_page">
+<!--     <section class="section-padding" id="about_page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-10 col-md-offset-1">
@@ -132,7 +134,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- About-Area-End -->
+
 
 {% endblock content %}
