--- a/main/templates/main/payment_success.html
+++ b/main/templates/main/payment_success.html
@@ -1,12 +1,13 @@
-<html>
-<body>
-<div style="display:none">
-   	<input type="hidden" name="csrfmiddlewaretoken" value="{% csrf_token %}">
-</div>
+{% extends "main/base.html" %}
+{% block content %}
+	<div style="display:none">
+   		<input type="hidden" name="csrfmiddlewaretoken" value="{% csrf_token %}">
+	</div>
 <h4>Thank You.</h4>
-<h4>Your order status is {{ status }}</h4>
-<h4>Your Transaction ID for this transaction is {{ txnid }}</h4>
-<h4>We have received a payment of Rs. {{ amount}}</h4> 
+<div>
+<p>Your order status is {{ status }}</p>
+<p>Your Transaction ID for this transaction is {{ txnid }}</p>
+<p>We have received a payment of Rs. {{ amount}}</p> 
+</div>
 
-</body>
-</html>
+{% endblock content %}
