--- a/main/templates/main/logout.html
+++ b/main/templates/main/logout.html
@@ -2,8 +2,8 @@
 {% block content %}
   <h2>You have been Logged Out</h2>
   <div class="border-top pt-3">
-    <small class="text-muted">
+    <div class="text-muted">
       <a href="{% url 'login' %}">Login Again</a>
-    </small>
+    </div>
   </div>
 {% endblock content %}
