--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="{% static 'main/images/logo.png' %}" alt="Logo"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'main/images/logo.png' %}" alt="Logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="primary_menu">
                 <ul class="nav navbar-nav mainmenu" >
@@ -80,12 +80,14 @@
     {% endif %}
         {% if messages %}
           {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-              {{ message }}
-            </div>
+            {% if 'safe' in message.tags %}
+                <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
+            {% else %}
+                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+            {% endif %}
           {% endfor %}
         {% endif %}    
-        {% block content %}{% endblock content %}
+    {% block content %}{% endblock content %}
     </div>
 
     <!-- Footer-Area -->
@@ -139,7 +141,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-5">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <span>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved<!--  | This template is made with <i class="lnr lnr-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> --></span>
+            <span>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="lnr lnr-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <div class="space-30 hidden visible-xs"></div>
                     </div>
