--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -13,10 +13,10 @@
       </div>
     </form>
     <div class="border-top pt-3">
-      <small class="text-muted">
+      <div class="text-muted">
         Need an Account?
-        <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
-      </small>
+        <a class="ml-2" href="{% url 'register' %}">Register Here</a>
+      </div>
     </div>
   </div>
 {% endblock content %}
