--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,6 +5,16 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137427057-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137427057-1');
+</script>
+
     <meta charset="UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +24,7 @@
     <meta name="keywords" content="movies, series, online streaming, html template, cinema html template">
     <meta name="author" content="GnoDesign">
 
-    <title>movify - Movies, Series & Cinema HTML Template</title>
+    <title>CinePass - Movies & Cinema</title>
 
     <link rel="shortcut icon" href="{% static 'main/images/favicon.png' %}" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'main/images/apple-touch-icon-iphone.png' %}">
